# covas-next-aiserver

./: .dockerignore  .gitattributes  .gitignore  Dockerfile.cpu  Dockerfile.vk  install.sh  pyproject.toml  pyrightconfig.json  readme.md  requirements.txt
.github/workflows/: build-docker.yml  build-executable.yml
e2e/: build.sh  test_Executable.py
eval/: .gitignore  evaluate.ipynb  validation.ipynb
generate/: domain_event_dialogs.ipynb
generate/data/: names.json
src/: AIServer.py  AIServerInternal.py
src/lib/: embed.py  embed_jina.py  embed_llamacpp.py  embed_ort.py  llm.py  llm_llamacpp.py  llm_llamacpp_grammar.py  llm_llamacpp_utils.py  localLLM.py  localLLMGrammarUtils.py  localLLMUtils.py  localSTT.py  stt.py  stt_asr_onnx.py  stt_fasterwhisper.py  stt_moonshine.py  stt_nemo.py  stt_sherpa.py  tts.py  tts_kitten.py  tts_kokoro.py  tts_sherpa.py  tts_sherpa_kokoro.py  tts_sherpa_vits.py  tts_supertonic.py
test/lib/: test_llm_llamacpp.py  test_stt_fasterwhisper.py  test_stt_moonshine.py  test_tts_kokoro.py  test_tts_sherpa.py
train/: Llama-3.2-1b_unsloth_finetuning.ipynb  Llama-3.2-3b_unsloth_finetuning.ipynb  Llama-3.2-3b_unsloth_finetuning_validation.ipynb  install.sh  smollm2_unsloth_finetuning.ipynb
